tests/NormalTests/paczka1/fuzzy1/43348428.err
Error in line 2: 0lkvCPSy S898 5,1
Error in line 3: SUm89zijv4T A964 98,9
Error in line 4: 0lkvCPSy S903 88,2
Error in line 7: SUm89zijv4T S903 8,8
Error in line 24: LxQgvYREw A134 60,5
Error in line 28: SUm89zijv4T S898 68,2
